# ColorFul

./: CMakeLists.txt  main.cpp
